@@ -1,12 +1,0 @@
-sudo: false
-# use Ubuntu 20.04 (Focal Fossa) image, it contains the latest JDK
-dist: focal
-
-# use X Virtual Framebuffer to run GUI-based unit tests
-services:
-  - xvfb
-
-language: java
-
-jdk:
-  - openjdk17
