@@ -9,6 +9,8 @@ v7.8.1:
    1.1.1970 (makes database processing easier and content more readable)
  - updated to JavaFX / OpenJFX 17
  - ensured JDK 17 compatibility
+ - created a GitHub Actions based CI (continuous integration) pipeline for
+   build and test execution (replaces the stalled Travis CI build)
  ExerciseViewer changes:
  - Garmin FIT parser: provides heartrate zones information and times within
    these zones (if available)
